Buger z-index

--- a/src/components/elements/Burger/style.module.scss
+++ b/src/components/elements/Burger/style.module.scss
@@ -15,7 +15,7 @@
   top: 0;
   transition: opacity .5s ease-in-out;
   width: 100%;
-  z-index: 20;
+  z-index: 100;
 
   &.open {
     display: block;
@@ -52,7 +52,7 @@
   top: 30px;
   transition: transform 1s ease-in;
   width: 30px;
-  z-index: 30;
+  z-index: 100;
 
   span {
     background: $color-white;
